Address Sonar findings in random-name loader
Extract repeated XML attribute/tag literals as constants, switch the
title-resolver functional parameter to UnaryOperator<String>, and use
LinkedHashMap.newLinkedHashMap. Also guard against a null Rule from
RuleSet.pick() and modernize getFirst() in the lazy test.